# presetshare-comments

./: .dockerignore  .gitignore  Dockerfile.comments-service  Dockerfile.project_verificator_service  Doxyfile  Makefile  README.md  annotated.html  classes.html  classhttp__connection-members.html  classhttp__connection.html  dir_1094d3d98b1c3a1a542c912009b9694d.html  dir_5373720a1da130bbe792b4f955ae8f2e.html  dir_65fd1ba60b97540ebd9f79ccfb2580d4.html  docker-compose.yml  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_type.html  hierarchy.html  index.html  logs_8cpp.html  logs_8cpp_source.html  logs_8hpp.html  logs_8hpp_source.html  main_8cpp.html  main_8cpp_source.html  server_8cpp.html  server_8cpp_source.html  server_8hpp.html  server_8hpp_source.html
comments-service/: CMakeLists.txt  Doxyfile  conanfile.py  conanfile.txt
comments-service/include/: logs.hpp  server.hpp
comments-service/source/: logs.cpp  main.cpp  server.cpp
project_verificator_service/: CMakeLists.txt
project_verificator_service/include/: server.hpp
project_verificator_service/source/: server.cpp
scylla/: mutant-data.txt  scylla-init.txt
scylla/scylla-init/: init.cql  init.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
