CMAKE_MINIMUM_REQUIRED(VERSION 3.24.3)

PROJECT(p_v_service LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)
set(Boost_USE_STATIC_LIBS ON)

find_package(Boost 1.82.0 REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

set(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
set(SOURCE_DIR ${CMAKE_SOURCE_DIR}/source)

file(GLOB_RECURSE SOURCES
    ${INCLUDE_DIR}/*.hpp
    ${SOURCE_DIR}/*.cpp)

include_directories(
    ${INCLUDE_DIR}
    ${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE ${Boost_LIBRARIES} Threads::Threads)
